fix: team select colors change on safari when team is selected

--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -60,3 +60,7 @@ a:active {
 .syncGreen {
     color: green;
 }
+.match-select .team-select button:disabled {
+    color:gray;
+    background-color: darkgray
+}
